@@ -207,7 +207,6 @@ use "Isar/context_rules.ML";
 use "Isar/skip_proof.ML";
 use "Isar/method.ML";
 use "Isar/proof.ML";
-use "ML/ml_thms.ML";
 use "Isar/element.ML";
 
 (*derived theory and proof elements*)
@@ -235,6 +234,7 @@ use "Isar/parse_spec.ML";
 use "Isar/spec_rules.ML";
 use "Isar/specification.ML";
 use "Isar/typedecl.ML";
+use "ML/ml_thms.ML";
 
 (*toplevel transactions*)
 use "Isar/proof_node.ML";
